--- a/filtro/style.css
+++ b/filtro/style.css
@@ -3,18 +3,18 @@ body {
   min-height: 100vh;
 }
 .main-content > div {
-  width: 70%;
+  width: 80%;
 }
 .main-content {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .uk-navbar-nav {
   justify-content: center;
-  font-family: "Catamaran", sans-serif;
+  font-family: "Poppins", sans-serif;
   gap: 15px;
   margin-bottom: 35px;
 }
@@ -97,9 +97,9 @@ body {
 button {
   border: 0;
   height: 100%;
-  padding: 5px 15px;
+  padding: 5em 15em;
   background: #72b0e9;
-  font-size: 30px;
+  font-size: 20px;
   color: #fff;
   position: relative;
   right: -100px;
