--- a/filtro/style.css
+++ b/filtro/style.css
@@ -23,7 +23,7 @@ body {
   min-width: 100px;
 }
 .uk-navbar-nav > li > a {
-  padding: 15px 15px;
+  padding: 15px 1%;
   display: block;
   background-color: #fff;
   color: #222;
