--- a/filtro/style.css
+++ b/filtro/style.css
@@ -27,7 +27,7 @@ body {
   display: block;
   background-color: #fff;
   color: #222;
-  font-size: 15px;
+  font-size: .75em;
   min-height: auto;
   font-weight: 600;
   box-shadow: 0 0 25px #cccccc42;
